add command server,cliient

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
 add_subdirectory(lib/)
 add_subdirectory(tcpserver/)
 add_subdirectory(graceserver/)
+add_subdirectory(commandserver/)
