--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(lib/)
 add_subdirectory(tcpserver/)
 add_subdirectory(graceserver/)
 add_subdirectory(commandserver/)
+add_subdirectory(forkserver/)
