add thread server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(tcpserver/)
 add_subdirectory(graceserver/)
 add_subdirectory(commandserver/)
 add_subdirectory(forkserver/)
+add_subdirectory(threadserver/)
